--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>treino-tracker-mobile</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Treinamente</title>
+    <meta name="description" content="Acompanhe seus treinos" />
+    <meta name="author" content="Victor Gabriel" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
